force-app/main/default/objects/DuplicateMergeLogArchive__c/DuplicateMergeLogArchive__c.object-meta.xml
<CustomObject>
    <description>Archive of duplicate merge log records</description>
    <label>Duplicate Merge Log Archive</label>
    <nameField>
        <displayFormat>DMLA-{0000}</displayFormat>
        <label>Archive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Duplicate Merge Log Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>