force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/ArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchivedDate__c</fullName>
    <description>Date when the log was archived</description>
    <inlineHelpText>Date and time when this record was archived</inlineHelpText>
    <label>Archived Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>