force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/ArchivedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ArchivedDateTime__c</fullName>
    <description>Date and time when this record was archived</description>
    <inlineHelpText>Date and time when this record was archived</inlineHelpText>
    <label>Archived Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>