force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error message if the merge had an error</description>
    <inlineHelpText>Error message if the merge had an error</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>