force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/FieldMergeDetails__c.field-meta.xml
<CustomField>
    <fullName>FieldMergeDetails__c</fullName>
    <description
  >JSON structure containing field-level merge decisions and conflicts</description>
    <inlineHelpText
  >JSON structure containing field-level merge decisions and conflicts</inlineHelpText>
    <label>Field Merge Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>