force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/LogName__c.field-meta.xml
<CustomField>
    <fullName>LogName__c</fullName>
    <description>Name from the original log record</description>
    <inlineHelpText>Name from the original log record</inlineHelpText>
    <label>Log Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>