force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/MasterId__c.field-meta.xml
<CustomField>
    <fullName>MasterId__c</fullName>
    <description>ID of the master record</description>
    <inlineHelpText>ID of the master record</inlineHelpText>
    <label>Master ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>