force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/MergedIds__c.field-meta.xml
<CustomField>
    <fullName>MergedIds__c</fullName>
    <description>JSON array of merged record IDs</description>
    <inlineHelpText>JSON array of merged record IDs</inlineHelpText>
    <label>Merged Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>