force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/MergeTime__c.field-meta.xml
<CustomField>
    <fullName>MergeTime__c</fullName>
    <description>Date and time when the merge operation occurred</description>
    <inlineHelpText
  >Date and time when the merge operation occurred</inlineHelpText>
    <label>Merge Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>