force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/OriginalCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCreatedDate__c</fullName>
    <description>CreatedDate from the original log record</description>
    <inlineHelpText>Original creation date of the log before archiving</inlineHelpText>
    <label>Original Created Date</label>
    <type>DateTime</type>
</CustomField>