force-app/main/default/objects/DuplicateMergeLogArchive__c/fields/OriginalLogId__c.field-meta.xml
<CustomField>
    <fullName>OriginalLogId__c</fullName>
    <description>ID of the original merge log record</description>
    <externalId>true</externalId>
    <inlineHelpText>ID of the original merge log record</inlineHelpText>
    <label>Original Log ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>